# nse_option_chain_analytics

./: .gitignore  main.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  postCreate.sh
.github/workflows/: nse_fetch.yml
dashboard/: index.html  script.js  style.css
data/: derived_BANKNIFTY.csv  derived_NIFTY.csv  derived_latest.csv  oi_gaps_BANKNIFTY.csv  oi_gaps_NIFTY.csv  oi_magnets_BANKNIFTY.csv  oi_magnets_NIFTY.csv
examples/: live_loop_example.py  real_fetch_example.py
src/: __init__.py
src/analytics/: analytics_option3.py  oi_skew.py  reversals.py  utils.py
src/ingestion/: nse_fetcher.py
src/nse_chain/: analytics.py  data_models.py  fetcher.py  utils.py
src/signals/: signal_engine.py
tests/: test_smoke.py
