[project]
name = "analytics"
version = "0.1.0"
description = "Option analytics package (OI skew, gamma exposure, volume spike, reversals)"
authors = [{ name = "Usha Bansode" }]
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

